styles.css
/* Css Reset Start */

/*
  1. Use a more-intuitive box-sizing model.
*/
*,
*::before,
*::after {
    box-sizing: border-box;
}

/*
  2. Remove default margin
*/
* {
    margin: 0;
    padding: 0;
    font-family: 'poppins', sans-serif;
}

/*
  3. Allow percentage-based heights in the application
*/
html,
body {
    height: 100%;
}

/*
  Typographic tweaks!
  4. Add accessible line-height
  5. Improve text rendering
*/
body {
    line-height: 1.5;
    -webkit-font-smoothing: antialiased;
}

/*
  6. Improve media defaults
*/
img,
picture,
video,
canvas,
svg {
    display: inline;

    max-width: 100%;
}

/*
  7. Remove built-in form typography styles
*/
input,
button,
textarea,
select {
    font: inherit;
}

/*
  8. Avoid text overflows
*/
p,
h1,
h2,
h3,
h4,
h5,
h6 {
    overflow-wrap: break-word;
}

/*
  9. Create a root stacking context
*/
#root,
#__next {
    isolation: isolate;
}


/* Css Reset End */
.flex-div {
    display: flex;
    align-items: center;
}



#mainNav {
    padding: 10px 2%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
    background: #fff;
    position: sticky;
    top: 0;
    z-index: 10;
}



.menu-icon-image {
    width: 20px;
    height: 20px;
    margin-right: 1.5rem;

}



.nav-left .youtube-logo-img {
    width: 100px;
}


.nav-right img {
    margin-right: 20px;
    width: 25px;
}


.nav-right .user-icon {
    background-color: rgb(7, 98, 7);
    padding: .1rem .5rem;
    border-radius: 100%;
    color: #fff;
}

.nav-middle img {
    width: 25px;
}

.nav-middle .search-bar {
    border: 1px solid #ccc;
    margin-right: 15px;
    padding: 8px 12px;
    border-radius: 30px;
}

.nav-middle .search-bar input {
    width: 500px;
    border: 0;
    outline: none;
    background: transparent;
}


#sideNav {
    padding: 10px 1%;
    width: 15%;

    height: 100vh;
}

#sideNav img {
    width: 25px;
    margin-right: 25px;


}

.sideNav-tab {
    padding: .5rem 1rem;

}

.sideNav-tab:hover {
    background-color: #ccc;
    border-radius: 10px;
    cursor: pointer;

}

#sideNav hr {
    border: 0;
    height: 0;
    border-top: 1px solid rgba(0, 0, 0, 0.1);
    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
    margin: 1rem 0;
}

#sideNav h2{
    padding: 0 1rem;
    font-weight: lighter;
    font-size: 1rem;
}

#sideNav .sub-img {
    border-radius: 100%;
}

